--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -23,7 +24,8 @@
     "mongoose": "^7.0.3",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nanoid": "^3.0.0",
+    "nanoid": "^3.3.6",
+    "sendgrid": "^5.2.3",
     "supertest": "^6.3.3"
   },
   "devDependencies": {
